# Coding_Projects

./: README.md
Cs442-Android-Studio/442MultiNotesNihanAbaci/MultiNotes/app/: build.gradle  proguard-rules.pro
Cs442-Android-Studio/KnowYourGovernment2/app/: build.gradle
Cs442-Android-Studio/KnowYourGovernment2/app/src/main/: AndroidManifest.xml
Cs442-Android-Studio/KnowYourGovernment2/app/src/main/res/layout/: about_activity.xml  activity_main.xml  activity_official_page2.xml  official_list_row.xml  official_page.xml
Cs442-Android-Studio/KnowYourGovernment2/app/src/main/res/layout-land/: activity_official_page2.xml  official_page.xml
Cs442-Android-Studio/KnowYourGovernment2/app/src/main/res/menu/: main_menu.xml
Cs442-Android-Studio/KnowYourGovernment2/app/src/main/res/values/: colors.xml  styles.xml
Cs442-Android-Studio/KnowYourGovernment2/gradle/wrapper/: gradle-wrapper.properties
Cs442-Android-Studio/MultiNotesApplication/MultiNotes/app/src/main/: AndroidManifest.xml
Cs442-Android-Studio/NewsGateway 2/app/: build.gradle
Cs442-Android-Studio/NewsGateway 2/app/src/main/: AndroidManifest.xml
Cs442-Android-Studio/NewsGateway 2/app/src/main/res/layout/: activity_main.xml  fragment_news.xml
Cs442-Android-Studio/NewsGateway 2/gradle/wrapper/: gradle-wrapper.properties
Cs442-Android-Studio/StockWatch/app/: build.gradle
Cs442-Android-Studio/StockWatch/app/src/main/: AndroidManifest.xml
Cs495-Programming-Paradigms-Paterns/: .gitignore  README.md  cs495.cabal
Cs495-Programming-Paradigms-Paterns/src/mps/: MP1.hs  MP2.hs  MP3.hs  MP4.hs
(+50 files in other folders)
